# docdelta

./: .gitignore  README.md  requirements-dev.txt  requirements.txt
backend/: pyproject.toml
backend/proto/: diff.proto
backend/src/: diff_pb2.py  diff_pb2_grpc.py  diff_pdf.py
frontend/: viewer.html
frontend/src/: App.js
tests/: test_golden_diff.py  test_map_bbox.py
tests/golden/: edge_columns_diff.json  nda_diff.json  pa_diff.json  tracked_changes_diff.json
